[package]
name = "mazz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
mongodb = "2.3.1"
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets", "uuid"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
